[package]
name = "pallas-network2"
description = "Ouroboros networking stack for P2P interactions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
documentation = "https://docs.rs/pallas"
readme = "README.md"

[dependencies]
futures = "0.3.31"
trait-variant = "0.1.2"
rand = { workspace = true, optional = true }
tokio = { version = "1.45.1", optional = true, features = ["full"] }
pallas-codec.workspace = true
chrono.workspace = true
opentelemetry = "0.32.0"
tracing.workspace = true
byteorder.workspace = true
socket2.workspace = true
thiserror.workspace = true
hex.workspace = true
cddl = { version = "0.10", optional = true }

[features]
emulation = ["tokio", "rand"]
default = ["emulation"]
blueprint = ["dep:cddl"]

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "protocol"
harness = false
