[package]
name = "pallas-primitives"
description = "Ledger primitives and cbor codec for the different Cardano eras"
version = "0.32.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-byron"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Santiago Carmuega <santiago@carmuega.me>",
    "Lucas Rosa <x@rvcas.dev>",
]

[dependencies]
hex = "0.4.3"
pallas-crypto = { version = "=0.32.0", path = "../pallas-crypto" }
pallas-codec = { version = "=0.32.0", path = "../pallas-codec" }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
serde_json = { version = "1.0.79", optional = true }

[features]
json = ["serde", "serde_json"]
default = ["json"]
