[package]
name = "pallas-primitives"
description = "Ledger primitives and cbor codec for the different Cardano eras"
version = "1.0.0-alpha.3"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-primitives"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Santiago Carmuega <santiago@carmuega.me>",
    "Lucas Rosa <x@rvcas.dev>",
]

[dependencies]
hex = "0.4.3"
pallas-crypto = { version = "=1.0.0-alpha.3", path = "../pallas-crypto" }
pallas-codec = { version = "=1.0.0-alpha.3", path = "../pallas-codec" }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
serde_json = { version = "1.0.79", optional = true }

[dev-dependencies]
proptest = { version = "1.7.0", features = ["alloc"] }
test-case = "3.3.1"

[features]
json = ["serde", "serde_json"]
default = ["json"]
relaxed = ["pallas-crypto/relaxed"]
