[package]
name = "pallas-rolldb"
description = "An opinionated Cardano storage engine built on top of RocksDB"
version = "0.19.1"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-rolldb"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
rocksdb = { version = "0.21.0", default-features = false, features = ["multi-threaded-cf"] }
bincode = "1.3.3"
serde = "1.0.188"
thiserror = "1.0.49"
pallas-crypto = { version = "=0.19.1", path = "../pallas-crypto" }
tracing = "0.1.37"
tokio = { version = "1.32.0", features = ["sync"] }

[dev-dependencies]
tempfile = "3.3.0"
