[package]
name = "pallas-storage"
description = "Utilities to store / retrieve ledger data to / from disk"
version = "0.14.0-alpha.5"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-storage"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
bincode = "1.3.3"
hex = "0.4.3"
rocksdb = "0.19.0"
serde = "1.0.145"
thiserror = "1.0.31"

[features]
unstable = []
