[package]
name = "pallas-traverse"
description = "Utilities to traverse over multi-era block data"
version = "0.19.1"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-traverse"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
pallas-primitives = { version = "=0.19.1", path = "../pallas-primitives" }
pallas-addresses = { version = "=0.19.1", path = "../pallas-addresses" }
pallas-crypto = { version = "=0.19.1", path = "../pallas-crypto" }
pallas-codec = { version = "=0.19.1", path = "../pallas-codec" }
hex = "0.4.3"
thiserror = "1.0.31"

# TODO: remove once GenesisValue moves into new genesis crate
serde = "1.0.155"

[features]
unstable = []
