[package]
name = "pallas-txbuilder"
description = "An ergonomic Cardano transaction builder"
version = "0.32.1"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-txbuilder"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>", "Cainã Costa <me@cfcosta.com>"]

[dependencies]
pallas-codec = { path = "../pallas-codec", version = "=0.32.1" }
pallas-crypto = { path = "../pallas-crypto", version = "=0.32.1" }
pallas-primitives = { path = "../pallas-primitives", version = "=0.32.1" }
pallas-traverse = { path = "../pallas-traverse", version = "=0.32.1" }
pallas-addresses = { path = "../pallas-addresses", version = "=0.32.1" }
pallas-wallet = { path = "../pallas-wallet", version = "=0.32.1" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.44"
hex = "0.4.3"
