[package]
name = "pallas-upstream"
description = "Opinionated implementation of component that pulls chain data from an upstream node"
version = "0.19.0-alpha.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-upstream"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
async-trait = "0.1.68"
byteorder = "1.4.3"
hex = "0.4.3"
pallas-codec = { version = "0.19.0-alpha.0", path = "../pallas-codec" }
pallas-crypto = { version = "0.19.0-alpha.0", path = "../pallas-crypto" }
pallas-network = { version = "0.19.0-alpha.0", path = "../pallas-network" }
pallas-traverse = { version = "0.19.0-alpha.0", path = "../pallas-traverse" }
serde = { version = "1.0.154", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1", features = ["net", "macros", "io-util"] }
tracing = "0.1.37"

gasket = "0.2.0"
# gasket = { git = "https://github.com/construkts/gasket-rs" }
# gasket = { path = "../../../construkts/gasket-rs" }

[dev-dependencies]
tracing-subscriber = "0.3.16"
