[package]
name = "pallas-utxorpc"
description = "Pallas interoperability with the UTxORPC spec"
version = "1.0.0-alpha.6"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-utxorpc"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
# utxorpc-spec = { path = "../../../utxorpc/spec/gen/rust" }
utxorpc-spec = { version = "0.19", default-features = false }

pallas-traverse = { version = "=1.0.0-alpha.6", path = "../pallas-traverse" }
pallas-primitives = { version = "=1.0.0-alpha.6", path = "../pallas-primitives" }
pallas-codec = { version = "=1.0.0-alpha.6", path = "../pallas-codec" }
pallas-crypto = { version = "=1.0.0-alpha.6", path = "../pallas-crypto" }
prost-types = "0.13.1"
pallas-validate = { version = "=1.0.0-alpha.6", path = "../pallas-validate" }

[features]
default = ["v1alpha"]
v1alpha = ["utxorpc-spec/utxorpc-v1alpha-cardano"]
v1beta = ["utxorpc-spec/utxorpc-v1beta-cardano"]

[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.120"
pretty_assertions = "1.4.0"
prost = "0.13"
