[package]
name = "pallas-utxorpc"
description = "Pallas interoperability with the UTxORPC spec"
version = "1.0.0-alpha.6"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-utxorpc"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
# utxorpc-spec = { path = "../../../utxorpc/spec/gen/rust" }
utxorpc-spec = { version = "0.19", default-features = false, features = [
    "utxorpc-v1alpha-cardano",
    "utxorpc-v1alpha-query",
    "utxorpc-v1alpha-submit",
    "utxorpc-v1alpha-sync",
    "utxorpc-v1alpha-watch",
    "utxorpc-v1beta-cardano",
    "utxorpc-v1beta-query",
    "utxorpc-v1beta-submit",
    "utxorpc-v1beta-sync",
    "utxorpc-v1beta-watch",
] }

pallas-traverse = { version = "=1.0.0-alpha.6", path = "../pallas-traverse" }
pallas-primitives = { version = "=1.0.0-alpha.6", path = "../pallas-primitives" }
pallas-codec = { version = "=1.0.0-alpha.6", path = "../pallas-codec" }
pallas-crypto = { version = "=1.0.0-alpha.6", path = "../pallas-crypto" }
prost-types = "0.13.1"
pallas-validate = { version = "=1.0.0-alpha.6", path = "../pallas-validate" }

[features]
default = ["u5c-v1alpha-compat"]
# Re-export v1alpha as the root `pallas_utxorpc::{Mapper, spec}` for
# back-compat with pre-v1beta releases. Opt out with default-features = false
# to force callers onto explicit `v1alpha::Mapper` / `v1beta::Mapper` paths.
u5c-v1alpha-compat = []

[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.120"
pretty_assertions = "1.4.0"
prost = "0.13"
