[package]
name = "pallas-utxorpc"
description = "Pallas interoperability with the UTxORPC spec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
documentation = "https://docs.rs/pallas-utxorpc"
readme = "README.md"

[dependencies]
# utxorpc-spec = { path = "../../../utxorpc/spec/gen/rust" }
utxorpc-spec = { version = "0.19", default-features = false, features = [
    "utxorpc-v1alpha-cardano",
    "utxorpc-v1alpha-query",
    "utxorpc-v1alpha-submit",
    "utxorpc-v1alpha-sync",
    "utxorpc-v1alpha-watch",
    "utxorpc-v1beta-cardano",
    "utxorpc-v1beta-query",
    "utxorpc-v1beta-submit",
    "utxorpc-v1beta-sync",
    "utxorpc-v1beta-watch",
] }

pallas-traverse.workspace = true
pallas-primitives.workspace = true
pallas-codec.workspace = true
pallas-crypto.workspace = true
prost-types = "0.13.1"
pallas-validate.workspace = true

[features]
default = ["u5c-v1alpha-compat"]
# Re-export v1alpha as the root `pallas_utxorpc::{Mapper, spec}` for
# back-compat with pre-v1beta releases. Opt out with default-features = false
# to force callers onto explicit `v1alpha::Mapper` / `v1beta::Mapper` paths.
u5c-v1alpha-compat = []

[dev-dependencies]
hex.workspace = true
serde_json.workspace = true
pretty_assertions = "1.4.0"
prost = "0.13"
