[package]
name = "pallas-validate"
description = "Utilities for validating transactions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true
documentation = "https://docs.rs/pallas-validate"
readme = "README.md"

[dependencies]
pallas-addresses.workspace = true
pallas-codec.workspace = true
pallas-crypto.workspace = true
pallas-primitives.workspace = true
pallas-traverse.workspace = true
hex.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
itertools.workspace = true
tracing.workspace = true

# phase2 dependencies
amaru-uplc = { version = "0.1.0", optional = true }

[features]
phase2 = ["amaru-uplc"]
